# ta-lib-rt

./: README.md  build.sh  build_linux.sh  build_windows.sh
DevTools/: TA-Lib release Procedure.txt  myUtil.pm  publish.pl  release_unix.pl  test.pl
demo/: Makefile  macd_batch.c  macd_batch.txt  macd_rt.c
ta-lib/: CHANGELOG.TXT  CMakeLists.txt  HISTORY.TXT  LICENSE.TXT  README.TXT  ta_func_api.xml  ta_func_api.xsd  ta_func_list.txt
ta-lib-rt/: CHANGELOG.TXT  CMakeLists.txt  mingw-w64-x86_64.cmake  ta_func_api.xml  ta_func_api.xsd  ta_func_list.txt
ta-lib-rt/c/: CMakeLists.txt  Makefile.am  configure.ac  ta-lib-rt-config.in  ta-lib-rt.dpkg.in  ta-lib-rt.spec.in
ta-lib-rt/c/ide/qt/lib_proj/ta_lib/: Copy2Lib.pri
ta-lib-rt/c/ide/qt/lib_proj/ta_lib/gen_code/: gen_code.pro
ta-lib-rt/c/ide/qt/lib_proj/ta_lib/ta_common/: ta_common.pro
ta-lib-rt/c/ide/qt/lib_proj/ta_lib/ta_func/: ta_func.pro
ta-lib-rt/c/ide/qt/lib_proj/ta_lib/ta_libc/: ta_libc.pro
ta-lib-rt/c/ide/qt/lib_proj/ta_lib/ta_regtest/: ta_regtest.pro
ta-lib-rt/c/include/: ta_abstract.h  ta_defs.h  ta_func.h
ta-lib-rt/c/make/cmd/cygwin/g++/gen_code/: Makefile
ta-lib-rt/c/make/cmd/cygwin/g++/ta_func/: Makefile
ta-lib-rt/c/make/cmd/cygwin/g++/ta_libc/: Makefile
ta-lib-rt/c/make/cmd/freebsd/g++/gen_code/: Makefile
ta-lib-rt/c/make/cmd/freebsd/g++/ta_func/: Makefile
ta-lib-rt/c/make/cmd/freebsd/g++/ta_libc/: Makefile
ta-lib-rt/c/make/cmd/linux/g++/gen_code/: Makefile
ta-lib-rt/c/make/cmd/linux/g++/ta_func/: Makefile
ta-lib-rt/c/make/cmd/linux/g++/ta_libc/: Makefile
ta-lib-rt/c/make/cmp/cygwin/g++/ta_func/: Makefile
ta-lib-rt/c/make/cmp/cygwin/g++/ta_libc/: Makefile
ta-lib-rt/c/make/cmp/cygwin/g++/ta_regtest/: Makefile
ta-lib-rt/c/make/cmp/freebsd/g++/gen_code/: Makefile
ta-lib-rt/c/make/cmp/freebsd/g++/ta_func/: Makefile
ta-lib-rt/c/make/cmp/freebsd/g++/ta_libc/: Makefile
ta-lib-rt/c/make/cmp/linux/g++/gen_code/: Makefile
ta-lib-rt/c/make/cmp/linux/g++/ta_func/: Makefile
ta-lib-rt/c/make/cmp/linux/g++/ta_libc/: Makefile
ta-lib-rt/c/make/cmp/linux/g++/ta_regtest/: Makefile
ta-lib-rt/c/make/cmr/cygwin/g++/ta_func/: Makefile
ta-lib-rt/c/make/cmr/cygwin/g++/ta_libc/: Makefile
ta-lib-rt/c/make/cmr/cygwin/g++/ta_regtest/: Makefile
ta-lib-rt/c/make/cmr/freebsd/g++/gen_code/: Makefile
ta-lib-rt/c/make/cmr/freebsd/g++/ta_func/: Makefile
ta-lib-rt/c/make/cmr/freebsd/g++/ta_libc/: Makefile
ta-lib-rt/c/make/cmr/linux/g++/ta_func/: Makefile
ta-lib-rt/c/make/cmr/linux/g++/ta_libc/: Makefile
ta-lib-rt/c/make/cmr/linux/g++/ta_regtest/: Makefile
ta-lib-rt/c/make/csd/cygwin/g++/gen_code/: Makefile
ta-lib-rt/c/make/csd/cygwin/g++/ta_func/: Makefile
ta-lib-rt/c/make/csd/cygwin/g++/ta_libc/: Makefile
ta-lib-rt/c/make/csd/cygwin/g++/ta_regtest/: Makefile
ta-lib-rt/c/make/csd/freebsd/g++/gen_code/: Makefile
ta-lib-rt/c/make/csd/freebsd/g++/ta_func/: Makefile
ta-lib-rt/c/make/csd/freebsd/g++/ta_libc/: Makefile
ta-lib-rt/c/make/csd/freebsd/g++/ta_regtest/: Makefile
ta-lib-rt/c/make/csd/linux/g++/gen_code/: Makefile
ta-lib-rt/c/make/csd/linux/g++/ta_func/: Makefile
ta-lib-rt/c/make/csd/linux/g++/ta_libc/: Makefile
ta-lib-rt/c/make/csp/cygwin/g++/ta_func/: Makefile
ta-lib-rt/c/make/csp/cygwin/g++/ta_libc/: Makefile
ta-lib-rt/c/make/csp/cygwin/g++/ta_regtest/: Makefile
ta-lib-rt/c/make/csp/freebsd/g++/gen_code/: Makefile
ta-lib-rt/c/make/csp/freebsd/g++/ta_func/: Makefile
ta-lib-rt/c/make/csp/freebsd/g++/ta_libc/: Makefile
ta-lib-rt/c/make/csp/linux/g++/ta_func/: Makefile
ta-lib-rt/c/make/csp/linux/g++/ta_libc/: Makefile
ta-lib-rt/c/make/csp/linux/g++/ta_regtest/: Makefile
ta-lib-rt/c/make/csr/cygwin/g++/ta_func/: Makefile
ta-lib-rt/c/make/csr/cygwin/g++/ta_libc/: Makefile
ta-lib-rt/c/make/csr/freebsd/g++/gen_code/: Makefile
ta-lib-rt/c/make/csr/freebsd/g++/ta_func/: Makefile
ta-lib-rt/c/make/csr/freebsd/g++/ta_libc/: Makefile
ta-lib-rt/c/make/csr/linux/g++/gen_code/: Makefile
ta-lib-rt/c/make/csr/linux/g++/ta_func/: Makefile
ta-lib-rt/c/make/csr/linux/g++/ta_libc/: Makefile
ta-lib-rt/c/make/csr/linux/g++/ta_regtest/: Makefile
ta-lib-rt/c/make/gen_make/ta_func/: ta_func.pro
ta-lib-rt/c/make/gen_make/ta_libc/: ta_libc.pro
ta-lib-rt/c/src/ta_abstract/: ta_abstract.c  ta_def_ui.c  ta_def_ui.h  ta_frame_priv.h  ta_func_api.c  ta_group_idx.c  ta_java_defs.h
ta-lib-rt/c/src/ta_abstract/frames/: ta_frame.c  ta_frame.h
ta-lib-rt/c/src/ta_abstract/tables/: table_a.c  table_b.c  table_c.c  table_d.c  table_e.c  table_k.c  table_m.c  table_o.c  table_r.c  table_s.c  table_t.c  table_v.c  table_w.c
ta-lib-rt/c/src/ta_abstract/templates/: ta_func.h.template  ta_x.c.template
ta-lib-rt/c/src/ta_common/: ta_memory.h  ta_retcode.c  ta_retcode.csv  ta_version.c
ta-lib-rt/c/src/ta_func/: Makefile.am  ta_ACCBANDS.c  ta_ACOS.c  ta_AD.c  ta_ADD.c  ta_ADOSC.c  ta_ADX.c  ta_ADXR.c  ta_APO.c  ta_AROON.c  ta_AROONOSC.c  ta_ASIN.c  ta_ATAN.c  ta_ATR.c  ta_AVGDEV.c  ta_AVGPRICE.c  ta_BBANDS.c  ta_BETA.c  ta_BOP.c  ta_CCI.c  ta_CDL2CROWS.c  ta_CDL3BLACKCROWS.c  ta_CDL3INSIDE.c  ta_CDL3LINESTRIKE.c  ta_CDL3OUTSIDE.c  ta_CDL3STARSINSOUTH.c  ta_CDL3WHITESOLDIERS.c  ta_CDLABANDONEDBABY.c  ta_CDLADVANCEBLOCK.c  ta_CDLBELTHOLD.c  ta_CDLBREAKAWAY.c  ta_CDLCLOSINGMARUBOZU.c  ta_CDLCONCEALBABYSWALL.c  ta_CDLCOUNTERATTACK.c  ta_CDLDARKCLOUDCOVER.c  ta_CDLDOJI.c  ta_CDLDOJISTAR.c  ta_CDLDRAGONFLYDOJI.c  ta_CDLENGULFING.c  ta_CDLEVENINGDOJISTAR.c  (+127 more)
ta-lib-rt/c/src/tools/gen_code/: gen_code.c  gen_code.h  print_funcs.c  print_funcs.h  print_funcs_xml.c  print_funcs_xml.h  print_utils.c  print_utils.h
ta-lib-rt/c/src/tools/ta_regtest/: CMakeLists.txt  ta_error_number.h  ta_regtest.c  test_abstract.c  test_util.c
ta-lib-rt/c/src/tools/ta_regtest/ta_test_func/: test_1in_1out.c  test_1in_2out.c  test_candlestick.c  test_ma.c  test_macd.c  test_minmax.c  test_mom.c  test_per_ema.c  test_per_hl.c  test_per_hlc.c  test_rsi.c  test_sar.c  test_stoch.c
ta-mysql/: LICENSE-GPL.TXT  README.TXT
ta-unixodbc/: LICENSE-LGPL.TXT  README.TXT
tools/: .cvsignore  (+8 more)
(+715 files in other folders)
